Add logos and code is uptodate

--- a/index.html
+++ b/index.html
@@ -293,18 +293,18 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <a target="_blank" href="https://fineoriginal.com">
-                                                <img src="img/plomx_porfolio/template_9.png" alt="Fineoriginal">
+                                            <a target="_blank" href="http://twompixels.com/">
+                                                <img src="img/plomx_porfolio/template_9.jpg" alt="virtual X">
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <a target="_blank" href="https://virtual-x.org/">
-                                                <img src="img/plomx_porfolio/template_8.png" alt="virtual X">
+                                            <a target="_blank" href="https://megaverse.game/">
+                                                <img src="img/plomx_porfolio/template_8.png" alt="Walahala">
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <a target="_blank" href="https://walahala.com/">
-                                                <img src="img/plomx_porfolio/template_13.png" alt="Walahala">
+                                            <a target="_blank" href="https://censyn.com/">
+                                                <img src="img/plomx_porfolio/template_10.jpg" alt="lavaxlabs">
                                             </a>
                                         </div>
                                     </div>
@@ -312,18 +312,18 @@
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <a target="_blank" href="https://defisports.com/">
-                                                <img src="img/plomx_porfolio/template_12.png" alt="Defisports">
+                                            <a target="_blank" href="https://axieinfinity.com/">
+                                                <img src="img/plomx_porfolio/template_13.png" alt="Defisports">
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <a target="_blank" href="https://redlightdapp.net/dashboard">
-                                                <img src="img/plomx_porfolio/template_11.png" alt="Redlight App">
+                                            <a target="_blank" href="https://manialands.com/">
+                                                <img src="img/plomx_porfolio/template_12.jpg" alt="Redlight App">
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <a target="_blank" href="https://lavaxlabs.com/">
-                                                <img src="img/plomx_porfolio/template_10.png" alt="lavaxlabs">
+                                            <a target="_blank" href="https://censyn.com/">
+                                                <img src="img/plomx_porfolio/template_10.jpg" alt="lavaxlabs">
                                             </a>
                                         </div>
                                     </div>
@@ -565,7 +565,9 @@
                                 <li><img src="img/plomx_clients/logo-white-full-horizontal.svg" alt="" /></li>
                                 <li><img src="img/plomx_clients/logo-white_EedZMfG.svg" alt="" /></li>
                                 <li><img src="img/plomx_clients/mania lands 1.png" alt="Mania" /></li>
-                                <li><img src="img/plomx_clients/pge-spot-full-rgb-pos-lg.png" class="h-100" alt="Spot" /></li>
+                                <!-- <li><img src="img/plomx_clients/pge-spot-full-rgb-pos-lg.png" class="h-100" alt="Spot" /></li> -->
+                                <li><img src="img/plomx_clients/imgpsh_fullsize_anim.png" alt="" /></li>
+                                <li><img src="img/plomx_clients/imgpsh_fullsize_anim_1.png" alt="Mania" /></li>
                             </ul>
                         </div>
                     </div>
