Metaverse_content_added

--- a/index.html
+++ b/index.html
@@ -261,6 +261,20 @@
                                     </div>
                                 </div>
                             </li>
+                            <li>
+                                <div class="services-post" data-toggle="modal" data-target="#ServicesModal"
+                                    onclick="metaverse()">
+                                    <div class="inner">
+                                        <div class="img-pnl">
+                                            <img src="img/services/metaverse.png" alt="Metaverse Design & Development">
+                                        </div>
+                                        <div class="txt-pnl">
+                                            <h5>Metaverse Design & Development</h5>
+                                            <a class="readmore-effect" href="javascript:void(0);">Read More </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -769,6 +783,11 @@
             document.getElementById("txt-1").innerHTML = "When it comes to automation, we develop bespoke, high-impact software solutions that put businesses in the driver's seat. With our custom software development services, your business can develop and expand at unprecedented rates. Say goodbye to the idea of extra investment when our custom software solutions can integrate seamlessly within your existing system!";
             document.getElementById("txt-2").innerHTML = "";
         }    
+        function metaverse() {
+            document.getElementById("serviceheading").innerHTML = "Metaverse Design & Development";
+            document.getElementById("txt-1").innerHTML = "PlomX builds innovative metaverse solutions to deliver our clients real business value. Being a Metaverse design and development company, we offer unparalleled dApps & 3D modeling. Our team is qualified in Virtual and Augmented reality and can develop Metaverse platforms that fulfill customers' needs. Let our Metaverse developers translate your company's concepts for the virtual meta world.";
+            document.getElementById("txt-2").innerHTML = "";
+        }  
     </script>
     <script>
         $('.carousel').carousel({
