Add Some New Services

--- a/index.html
+++ b/index.html
@@ -275,6 +275,62 @@
                                     </div>
                                 </div>
                             </li>
+                            <li>
+                                <div class="services-post" data-toggle="modal" data-target="#ServicesModal"
+                                    onclick="devops()">
+                                    <div class="inner">
+                                        <div class="img-pnl">
+                                            <img src="img/services/software-development.png" alt="DevOps">
+                                        </div>
+                                        <div class="txt-pnl">
+                                            <h5>DevOps</h5>
+                                            <a class="readmore-effect" href="javascript:void(0);">Read More </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="services-post" data-toggle="modal" data-target="#ServicesModal"
+                                    onclick="nft()">
+                                    <div class="inner">
+                                        <div class="img-pnl">
+                                            <img src="img/services/metaverse.png" alt="NFT Marketplace Development / WEB 3.0 Development">
+                                        </div>
+                                        <div class="txt-pnl">
+                                            <h5>NFT Marketplace Development / WEB 3.0 Development</h5>
+                                            <a class="readmore-effect" href="javascript:void(0);">Read More </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="services-post" data-toggle="modal" data-target="#ServicesModal"
+                                    onclick="augmented()">
+                                    <div class="inner">
+                                        <div class="img-pnl">
+                                            <img src="img/services/Virtual-Reality.png" alt="Augmented & Virtual Reality Development">
+                                        </div>
+                                        <div class="txt-pnl">
+                                            <h5>Augmented & Virtual Reality Development</h5>
+                                            <a class="readmore-effect" href="javascript:void(0);">Read More </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="services-post" data-toggle="modal" data-target="#ServicesModal"
+                                    onclick="dapp()">
+                                    <div class="inner">
+                                        <div class="img-pnl">
+                                            <img src="img/services/depp-smart-contracts.png" alt="Smart Contracts / DAPP Development ">
+                                        </div>
+                                        <div class="txt-pnl">
+                                            <h5>Smart Contracts / DAPP Development </h5>
+                                            <a class="readmore-effect" href="javascript:void(0);">Read More </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -787,7 +843,27 @@
             document.getElementById("serviceheading").innerHTML = "Metaverse Design & Development";
             document.getElementById("txt-1").innerHTML = "PlomX builds innovative metaverse solutions to deliver our clients real business value. Being a Metaverse design and development company, we offer unparalleled dApps & 3D modeling. Our team is qualified in Virtual and Augmented reality and can develop Metaverse platforms that fulfill customers' needs. Let our Metaverse developers translate your company's concepts for the virtual meta world.";
             document.getElementById("txt-2").innerHTML = "";
-        }  
+        }
+        function devops() {
+            document.getElementById("serviceheading").innerHTML = "DevOps";
+            document.getElementById("txt-1").innerHTML = "Monitoring, maintaining, supporting, and improving software infrastructure, whether in the cloud or on-premises, is essential. PlomX's DevOps engineers can resolve problems with resource allocation, reprioritizing tasks, and resizing operations. We'll ensure to manage the relationship between development and operations to run everything smoothly through the process. ";
+            document.getElementById("txt-2").innerHTML = "";
+        }
+        function nft() {
+            document.getElementById("serviceheading").innerHTML = "Metaverse Design & Development";
+            document.getElementById("txt-1").innerHTML = "PomX combines years of experience, professional expertise, and knowledge of top-of-the-line market trends to provide cutting-edge development services. Our team can develop customized NFT marketplaces where users can create their own NFTs to represent their digital products and services. You can create, buy, or sell NFTs in the marketplace. We'll provide you with the best NFT marketplace development services.";
+            document.getElementById("txt-2").innerHTML = " Our Web 3.0 development company is experienced and professional in developing Web 3.0 apps on different blockchain networks. We'll help you take your business goals to the next level with our quality services!";
+        }
+        function augmented() {
+            document.getElementById("serviceheading").innerHTML = "Metaverse Design & Development";
+            document.getElementById("txt-1").innerHTML = "If you want to present your services and products through augmented or virtual reality, PlomX is here to help you. We can help you to offer your customers more value and create a positive impact. We'll provide you with augmented reality development or virtual reality development solutions tailored to your needs. Contact us to experience remarkable quality in graphics & content! ";
+            document.getElementById("txt-2").innerHTML = "";
+        }
+        function dapp() {
+            document.getElementById("serviceheading").innerHTML = "Smart Contracts / DAPP Development ";
+            document.getElementById("txt-1").innerHTML = "PlomX is a leading smart contract development company, offering innovative solutions. Our team develops cutting-edge smart contract solutions for companies all around the world.";
+            document.getElementById("txt-2").innerHTML = "Our Dapp development team makes sure the perfect working of your Dapp. We're skilled to design and develop decentralized apps for various businesses. We'll help your company to achieve a competitive edge in the blockchain world with smart contracts and decentralized exchanges.";
+        }
     </script>
     <script>
         $('.carousel').carousel({
